--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,6 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/eed2015/mie/
-    - /bin/cp -R images $DEPLOYPATH
+    - /bin/cp -R HTML $DEPLOYPATH
+    - /bin/cp -R CSS $DEPLOYPATH
+    - /bin/cp -R IMG $DEPLOYPATH
